# aws-tui

./: Cargo.toml  LICENSE.md  README.md
cfn-tui/: CHANGELOG  Cargo.toml  README.md
cfn-tui/src/: main.rs
dynamodb-tui/: Cargo.toml  README.md
dynamodb-tui/src/: app.rs  aws.rs  keyboard.rs  main.rs  models.rs  ui.rs
ec2-tui/: CHANGELOG.md  Cargo.toml
ec2-tui/src/: main.rs
efs-tui/: Cargo.toml
efs-tui/src/: main.rs
src/: main.rs
