[package]
name = "cfn-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.29"
crossterm = "0.29.0"
aws-config = { version = "1.8.8", features = ["behavior-version-latest"] }
aws-sdk-cloudformation = "1.88.0"
tokio = { version = "1.48.0", features = ["full"] }
anyhow = "1.0.100"
chrono = "0.4.42"
regex = "1.12.2"
arboard = "3.4.1"
