[package]
name = "dynamodb-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.29"
crossterm = "0.29.0"
aws-config = { version = "1.8.8", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.88.0"
tokio = { version = "1.48.0", features = ["full"] }
anyhow = "1.0.100"
chrono = "0.4.42"
regex = "1.12.2"
arboard = "3.4.1"
serde = "1.0"
serde_json = "1.0"
