[package]
name = "ec2-tui"
version = "0.2.2"
edition = "2021"

[dependencies]
ratatui = "0.29"
crossterm = "0.29.0"
aws-config = { version = "^1.8", features = ["behavior-version-latest"] }
aws-sdk-ec2 = "1.194.0"
aws-sdk-sts = "1.94.0"
tokio = { version = "1.48.0", features = ["full"] }
anyhow = "1.0.100"
chrono = "0.4.42"
regex = "1.12.2"
arboard = "3.4.1"
rand = "0.9.2"
